# avl-allocator

./: .clang-format  CMakeLists.txt  README.md
cmake/: linkGTEST.cmake
include/: AVLAllocator.hpp  AVLTree.hpp  AVLTree.inl  Shared.hpp  debug.hpp
tests/: AVLAllocator_Test.cpp  AVLTree_Test.cpp  CMakeLists.txt
